Update ECG Personal Information Lock.ipynb

--- a/ECG Personal Information Lock.ipynb
+++ b/ECG Personal Information Lock.ipynb
@@ -1108,7 +1108,7 @@
     "            max_x = int(c_x)\n",
     "            \n",
     "            \n",
-    "def fun_onset_P(Qrs_on,fs,ecg_signal):\n",
+    "'''def fun_onset_P(Qrs_on,fs,ecg_signal):\n",
     "    downhill_points = []\n",
     "    \n",
     "    \n",
@@ -1155,7 +1155,7 @@
     "        if curvature > max_curvature:\n",
     "            max_curvature = curvature\n",
     "            offset_index = i\n",
-    "    return np.array(offset_index)"
+    "    return np.array(offset_index)'''"
    ]
   },
   {
